# fetch-inventory_service

./: .gitignore  .gitlab-ci.yml  README.md  dev-build.sh  helper.sh  local-build.sh  local-secrets.yml  local.sh  local.yml  pod.sh  pyproject.toml  test-build.sh
app/: events.py  filter_params.py  logger.py  main.py  middlware.py  sorting.py  tasks.py  utilities.py
app/config/: config.py  exceptions.py
app/database/: session.py
app/logs/: .gitignore  cron.sh  cronjob.txt  log_rotate.conf  logrotate-cron.sh
app/models/: accession_jobs.py  aisle_numbers.py  aisles.py  audit_trails.py  barcode_types.py  barcodes.py  batch_upload.py  buildings.py  container_types.py  conveyance_bins.py  delivery_locations.py  group_permissions.py  groups.py  item_retrieval_events.py  item_withdrawals.py  items.py  ladder_numbers.py  ladders.py  media_types.py  module_numbers.py  modules.py  move_discrepancies.py  non_tray_Item_withdrawal.py  non_tray_item_retrieval_events.py  non_tray_items.py  owner_tiers.py  owners.py  owners_size_classes.py  permissions.py  pick_list_requests.py  pick_lists.py  priorities.py  refile_items.py  refile_jobs.py  refile_non_tray_item.py  refile_non_tray_items.py  request_types.py  requests.py  shelf_numbers.py  shelf_position_numbers.py  (+18 more)
app/routers/: accession_jobs.py  aisle_numbers.py  aisles.py  audit_trails.py  auth.py  barcode_types.py  barcodes.py  batch_upload.py  buildings.py  container_types.py  conveyance_bins.py  delivery_locations.py  env_check.py  examples.py  groups.py  item_retrieval_events.py  items.py  ladder_numbers.py  ladders.py  media_types.py  module_numbers.py  modules.py  non_tray_item_retrieval_events.py  non_tray_items.py  owner_tiers.py  owners.py  permissions.py  pick_lists.py  priorities.py  (+24 more)
images/: api.dev.Containerfile  api.local.Containerfile  api.prod.Containerfile  api.stage.Containerfile  api.test.Containerfile
k8s/: deployment-demo.yml  deployment-dev.yml  deployment-prod.yml  deployment-stage.yml  deployment-test.yml  deployment.yml
migrations/: env.py  models.py
terraform/: main.tf
(+269 files in other folders)
