[tool.poetry]
name = "api"
version = "0.1.0"
description = "An API serving the Findings Environment for Collected Holdings application"
authors = ["Gregory Wolfe <gwolfe@loc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.1"
httpx = "^0.24.1"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
