[tool.poetry]
name = "api"
version = "0.1.0"
description = "An API serving the Findings Environment for Collected Holdings application"
authors = ["Gregory Wolfe <gwolfe@loc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.1"
httpx = "^0.24.1"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.103.2"
pydantic-settings = "^2.0.3"
sqlmodel = {git = "https://github.com/honglei/sqlmodel.git", rev = "main"}
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
