[tool.poetry]
name = "api"
version = "0.1.0"
description = "An API serving the Findings Environment for Collected Holdings application"
authors = ["Gregory Wolfe <gwolfe@loc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pytest = "^7.4.1"
httpx = "^0.24.1"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.0.3"
sqlmodel = {git = "https://github.com/honglei/sqlmodel.git", rev = "main"}
pytz = "^2023.3.post1"
fastapi = "^0.104.1"
fastapi-pagination = "^0.12.12"
sqlalchemy-utils = "^0.41.1"
pytest-html = "^4.1.1"
python-dotenv = "^1.0.1"
sqlalchemyseed = "^2.0.0"
python3-saml = "^1.16.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
